<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corner_radar_driver</name>
  <version>0.1.0</version>
  <description>The corner_radar_driver package</description>
  <maintainer email="gabriela-adriana.lapuste@ro.bosch.com">Adriana Gabriela Lapuste</maintainer>
  <license>Apache-2.0</license>

  <author email="gabriela-adriana.lapuste@ro.bosch.com">Adriana Gabriela Lapuste</author>
  <author email="robin.petereit@de.bosch.com">Robin Petereit</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-common</depend>
  <depend>off_highway_can</depend>
  <depend>corner_radar_driver_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ros2_socketcan_msgs</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
